@@ -7,6 +7,6 @@ IUSE=a52 aalib alsa altivec atmo +audioqueue avahi +avcodec +avformat bidi blura
 LICENSE=LGPL-2.1 GPL-2
 RDEPEND=!<media-video/ffmpeg-1.2:0 dev-libs/libgpg-error:0 net-dns/libidn:0 >=sys-libs/zlib-1.2.5.1-r2:0[minizip] virtual/libintl:0 a52? ( >=media-libs/a52dec-0.7.4-r3:0 ) aalib? ( media-libs/aalib:0 ) alsa? ( >=media-libs/alsa-lib-1.0.24:0 ) avahi? ( >=net-dns/avahi-0.6:0[dbus] ) avcodec? ( !libav? ( media-video/ffmpeg:0= ) libav? ( media-video/libav:0= ) ) avformat? ( !libav? ( media-video/ffmpeg:0= ) libav? ( media-video/libav:0= ) ) bidi? ( >=dev-libs/fribidi-0.10.4:0 ) bluray? ( >=media-libs/libbluray-0.3:0 ) cddb? ( >=media-libs/libcddb-1.2:0 ) chromaprint? ( >=media-libs/chromaprint-0.6:0 ) dbus? ( >=sys-apps/dbus-1.6:0 ) dc1394? ( >=sys-libs/libraw1394-2.0.1:0 >=media-libs/libdc1394-2.1:2 ) directfb? ( dev-libs/DirectFB:0 sys-libs/zlib:0 ) dts? ( >=media-libs/libdca-0.0.5:0 ) dvbpsi? ( >=media-libs/libdvbpsi-1.0.0:0 ) dvd? ( >=media-libs/libdvdread-4.9:0 >=media-libs/libdvdnav-4.9:0 ) elibc_glibc? ( >=sys-libs/glibc-2.8:2.2 ) faad? ( >=media-libs/faad2-2.6.1:0 ) fdk? ( media-libs/fdk-aac:0 ) flac? ( >=media-libs/libogg-1:0 >=media-libs/flac-1.1.2:0 ) fluidsynth? ( >=media-sound/fluidsynth-1.1.2:0 ) fontconfig? ( media-libs/fontconfig:1.0 ) gcrypt? ( >=dev-libs/libgcrypt-1.2.0:0= ) gme? ( media-libs/game-music-emu:0 ) gnome? ( gnome-base/gnome-vfs:2 dev-libs/glib:2 ) gnutls? ( >=net-libs/gnutls-3.0.20:0 ) ieee1394? ( >=sys-libs/libraw1394-2.0.1:0 >=sys-libs/libavc1394-0.5.3:0 ) jack? ( >=media-sound/jack-audio-connection-kit-0.99.0-r1:0 ) jpeg? ( virtual/jpeg:0 ) kate? ( >=media-libs/libkate-0.3:0 ) libass? ( >=media-libs/libass-0.9.8:0 media-libs/fontconfig:1.0 ) libcaca? ( >=media-libs/libcaca-0.99_beta14:0 ) libnotify? ( x11-libs/libnotify:0 x11-libs/gtk+:2 x11-libs/gdk-pixbuf:2 dev-libs/glib:2 ) libsamplerate? ( media-libs/libsamplerate:0 ) libtar? ( >=dev-libs/libtar-1.2.11-r3:0 ) libtiger? ( >=media-libs/libtiger-0.3.1:0 ) linsys? ( >=media-libs/zvbi-0.2.28:0 ) lirc? ( app-misc/lirc:0 ) live? ( >=media-plugins/live-2011.12.23:0 ) lua? ( >=dev-lang/lua-5.1:0 ) matroska? ( >=dev-libs/libebml-1:0= >=media-libs/libmatroska-1:0= ) modplug? ( >=media-libs/libmodplug-0.8.4:0 !~media-libs/libmodplug-0.8.8 ) mp3? ( media-libs/libmad:0 ) mpeg? ( >=media-libs/libmpeg2-0.3.2:0 ) mtp? ( >=media-libs/libmtp-1:0 ) musepack? ( >=media-sound/musepack-tools-444:0 ) ncurses? ( sys-libs/ncurses:5[unicode] ) ogg? ( >=media-libs/libogg-1:0 ) opencv? ( >media-libs/opencv-2:0 ) opengl? ( virtual/opengl:0 >=x11-libs/libX11-1.3.99.901:0 ) opus? ( >=media-libs/opus-1.0.3:0 ) png? ( media-libs/libpng:0= sys-libs/zlib:0 ) postproc? ( !libav? ( >=media-video/ffmpeg-1.2:0= ) libav? ( media-libs/libpostproc:0= ) ) projectm? ( media-libs/libprojectm:0 media-fonts/dejavu:0 ) pulseaudio? ( >=media-sound/pulseaudio-1:0 ) qt4? ( >=dev-qt/qtgui-4.6:4 >=dev-qt/qtcore-4.6:4 ) qt5? ( >=dev-qt/qtgui-5.1:5 >=dev-qt/qtcore-5.1:5 >=dev-qt/qtwidgets-5.1:5 >=dev-qt/qtx11extras-5.1:5 ) rdp? ( >=net-misc/freerdp-1.0.1:0= ) samba? ( || ( >=net-fs/samba-3.4.6:0[smbclient] >=net-fs/samba-4:0[client] ) ) schroedinger? ( >=media-libs/schroedinger-1.0.10:0 ) sdl? ( >=media-libs/libsdl-1.2.10:0 sdl-image? ( >=media-libs/sdl-image-1.2.10:0 sys-libs/zlib:0 ) ) sftp? ( net-libs/libssh2:0 ) shout? ( >=media-libs/libshout-2.1:0 ) sid? ( media-libs/libsidplay:2 ) skins? ( x11-libs/libXext:0 x11-libs/libXpm:0 x11-libs/libXinerama:0 ) speex? ( media-libs/speex:0 ) svg? ( >=gnome-base/librsvg-2.9:2 >=x11-libs/cairo-1.13.1:0 ) swscale? ( !libav? ( media-video/ffmpeg:0= ) libav? ( media-video/libav:0= ) ) taglib? ( >=media-libs/taglib-1.9:0 sys-libs/zlib:0 ) theora? ( >=media-libs/libtheora-1.0_beta3:0 ) tremor? ( media-libs/tremor:0 ) truetype? ( media-libs/freetype:2 virtual/ttf-fonts:0 !fontconfig? ( media-fonts/dejavu:0 ) ) twolame? ( media-sound/twolame:0 ) udev? ( >=virtual/udev-142:0 ) upnp? ( net-libs/libupnp:0 ) v4l? ( media-libs/libv4l:0 ) vaapi? ( x11-libs/libva:0[X,drm] !libav? ( media-video/ffmpeg:0=[vaapi] ) libav? ( media-video/libav:0=[vaapi] ) ) vcdx? ( >=dev-libs/libcdio-0.78.2:0 >=media-video/vcdimager-0.7.22:0 ) vdpau? ( >=x11-libs/libvdpau-0.6:0 !libav? ( >=media-video/ffmpeg-1.2:0= ) libav? ( >=media-video/libav-10:0= ) ) vnc? ( >=net-libs/libvncserver-0.9.9:0 ) vorbis? ( >=media-libs/libvorbis-1.1:0 ) vpx? ( media-libs/libvpx:0 ) X? ( x11-libs/libX11:0 ) x264? ( >=media-libs/x264-0.0.20090923:0= ) x265? ( media-libs/x265:0= ) xcb? ( >=x11-libs/libxcb-1.6:0 >=x11-libs/xcb-util-0.3.4:0 >=x11-libs/xcb-util-keysyms-0.3.4:0 ) xml? ( >=dev-libs/libxml2-2.5:2 ) zvbi? ( >=media-libs/zvbi-0.2.25:0 )
 REQUIRED_USE=aalib? ( X ) bidi? ( truetype ) cddb? ( cdda ) dvb? ( dvbpsi ) dxva2? ( avcodec ) ffmpeg? ( avcodec avformat swscale postproc ) fontconfig? ( truetype ) gnutls? ( gcrypt ) httpd? ( lua ) libcaca? ( X ) libtar? ( skins ) libtiger? ( kate ) qt4? ( X !qt5 ) qt5? ( X !qt4 ) sdl? ( X ) skins? ( truetype X ^^ ( qt4 qt5 ) ) vaapi? ( avcodec X ) vlm? ( encode ) xv? ( xcb )
-SLOT=0/5-7
+SLOT=0/5-8
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	git-r3	3a2bd0ae504c33a50061885480f3def3	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=bc0c741e725845710549f16eff295e72
+_md5_=a69d936f1e05ae5b61a4c5dc2a162c69
